fix: code block different font size on ios mobile
solution found here:
https://github.com/adityatelange/hugo-PaperMod/issues/828
and here:
https://stackoverflow.com/questions/38346494/why-is-flex-affecting-font-size-on-ios

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,14 @@
 	--beginner-darker: #a56175;
 }
 
+/* this should fix the ios mobile code blog font size bug, recorded here: https://github.com/adityatelange/hugo-PaperMod/issues/828 */
+code {
+	text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+}
+
 body {
 	line-height: 1;
 	font: normal 15px/1.5em "Helvetica Neue", Helvetica, Arial, sans-serif;
